@@ -1,6 +1,8 @@
 Release Notes
 
 * current
+  * updating lastStart
+  * id in fairshare
   * added taskID to getJob
   * introduced prio limit in shares with throttled
   * changed code=51 to force-kill
